--- a/app/src/main/res/layout/activity_display_patient_info.xml
+++ b/app/src/main/res/layout/activity_display_patient_info.xml
@@ -4,19 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gb.comp3074_assignment2.DisplayTestInfoActivity">
+    tools:context="com.gb.comp3074_assignment2.classes.DisplayPatientInfoActivity">
 
     <TextView
         android:id="@+id/patient_information"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="21dp"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="22dp"
-        android:text="Test Information:"
+        android:layout_below="@+id/patient_id_text"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_toEndOf="@+id/test_id_text"
+        android:layout_toRightOf="@+id/test_id_text"
+        android:text="Patient Information:"
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="34dp" />
 
@@ -28,27 +27,17 @@
         android:layout_alignStart="@+id/patient_information"
         android:layout_below="@+id/patient_information"
         android:layout_marginTop="22dp"
-        android:text="Test ID:" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView6"
-        android:layout_alignStart="@+id/textView6"
-        android:layout_below="@+id/textView6"
-        android:layout_marginTop="18dp"
         android:text="Patient ID:" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView7"
-        android:layout_alignStart="@+id/textView7"
-        android:layout_below="@+id/textView7"
-        android:layout_marginTop="21dp"
-        android:text="BPL:" />
+        android:layout_alignLeft="@+id/textView6"
+        android:layout_alignStart="@+id/textView6"
+        android:layout_below="@+id/textView6"
+        android:layout_marginTop="17dp"
+        android:text="Name:" />
 
     <TextView
         android:id="@+id/textView9"
@@ -58,7 +47,7 @@
         android:layout_alignStart="@+id/textView8"
         android:layout_below="@+id/textView8"
         android:layout_marginTop="23dp"
-        android:text="BPH:" />
+        android:text="Department:" />
 
     <TextView
         android:id="@+id/textView10"
@@ -68,47 +57,58 @@
         android:layout_alignStart="@+id/textView9"
         android:layout_below="@+id/textView9"
         android:layout_marginTop="18dp"
-        android:text="Temperature:" />
+        android:text="Room:" />
 
     <TextView
-        android:id="@+id/test_id_text"
+        android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView6"
-        android:layout_alignBottom="@+id/textView6"
-        android:layout_toEndOf="@+id/textView7"
-        android:layout_toRightOf="@+id/textView7" />
+        android:layout_alignLeft="@+id/textView10"
+        android:layout_alignStart="@+id/textView10"
+        android:layout_below="@+id/textView10"
+        android:layout_marginTop="14dp"
+        android:text="Doctor ID:" />
 
     <TextView
-        android:id="@+id/patient_id_text"
+        android:id="@+id/patientIdText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView7"
-        android:layout_toEndOf="@+id/textView10"
-        android:layout_toRightOf="@+id/textView10" />
+        android:layout_alignTop="@+id/textView6"
+        android:layout_toEndOf="@+id/textView9"
+        android:layout_toRightOf="@+id/textView9" />
 
     <TextView
-        android:id="@+id/bpl_text"
+        android:id="@+id/nameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView8"
-        android:layout_alignBottom="@+id/textView8"
-        android:layout_toEndOf="@+id/textView6"
-        android:layout_toRightOf="@+id/textView6" />
+        android:layout_alignTop="@+id/textView8"
+        android:layout_toEndOf="@+id/textView13"
+        android:layout_toRightOf="@+id/textView13" />
 
     <TextView
-        android:id="@+id/bph_text"
+        android:id="@+id/departmentText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView9"
-        android:layout_toEndOf="@+id/bpl_text"
-        android:layout_toRightOf="@+id/bpl_text" />
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_toEndOf="@+id/patientIdText"
+        android:layout_toRightOf="@+id/patientIdText" />
 
     <TextView
-        android:id="@+id/temperature_text"
+        android:id="@+id/roomText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView10"
-        android:layout_toEndOf="@+id/patient_information"
-        android:layout_toRightOf="@+id/patient_information" />
+        android:layout_toEndOf="@+id/textView13"
+        android:layout_toRightOf="@+id/textView13" />
+
+    <TextView
+        android:id="@+id/doctorText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView13"
+        android:layout_toEndOf="@+id/textView9"
+        android:layout_toRightOf="@+id/textView9" />
+
 </RelativeLayout>
