--- a/app/src/main/res/layout/activity_enter_test.xml
+++ b/app/src/main/res/layout/activity_enter_test.xml
@@ -23,34 +23,22 @@
         android:id="@+id/testIdEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView11"
-        android:layout_alignStart="@+id/textView11"
-        android:layout_below="@+id/textView11"
-        android:layout_marginTop="17dp"
+        android:layout_alignLeft="@+id/textView14"
+        android:layout_alignStart="@+id/textView14"
+        android:layout_below="@+id/textView14"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="number"
         android:text="Test ID" />
 
     <EditText
-        android:id="@+id/patientIdEdit"
+        android:id="@+id/bplEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/testIdEdit"
         android:layout_alignStart="@+id/testIdEdit"
         android:layout_below="@+id/testIdEdit"
-        android:layout_marginTop="17dp"
-        android:ems="10"
-        android:inputType="number"
-        android:text="Patient ID" />
-
-    <EditText
-        android:id="@+id/bplEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/patientIdEdit"
-        android:layout_alignStart="@+id/patientIdEdit"
-        android:layout_below="@+id/patientIdEdit"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="18dp"
         android:ems="10"
         android:inputType="number"
         android:text="BPL" />
@@ -61,7 +49,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/bplEdit"
         android:layout_alignStart="@+id/bplEdit"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/bplEdit"
+        android:layout_marginTop="17dp"
         android:ems="10"
         android:inputType="number"
         android:text="BPH" />
@@ -88,5 +77,51 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/temperatureEdit"
         android:layout_marginTop="20dp"
+        android:onClick="onClickBtn"
         android:text="Submit" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView11"
+        android:layout_alignStart="@+id/textView11"
+        android:layout_below="@+id/textView11"
+        android:layout_marginTop="14dp"
+        android:text="Name:"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView5"
+        android:layout_alignStart="@+id/textView5"
+        android:layout_below="@+id/textView5"
+        android:layout_marginTop="16dp"
+        android:text="Patient ID:"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/patientNameText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView5"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_toEndOf="@+id/textView5"
+        android:layout_toRightOf="@+id/textView5"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/patientIdText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView14"
+        android:layout_alignBottom="@+id/textView14"
+        android:layout_marginLeft="19dp"
+        android:layout_marginStart="19dp"
+        android:layout_toEndOf="@+id/textView14"
+        android:layout_toRightOf="@+id/textView14"
+        android:textSize="18sp" />
 </RelativeLayout>
