--- a/app/src/main/res/layout/activity_choose_test.xml
+++ b/app/src/main/res/layout/activity_choose_test.xml
@@ -8,15 +8,16 @@
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
-        android:text="Choose Test:"
+        android:background="?android:attr/colorAccent"
+        android:gravity="center"
+        android:text="Choose Test"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
         android:textSize="18sp" />
 
     <Spinner
@@ -26,7 +27,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView12"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="20dp" />
 
     <Button
         android:id="@+id/button2"
@@ -37,5 +38,6 @@
         android:layout_below="@+id/test_spinner"
         android:layout_marginTop="14dp"
         android:onClick="onClickBtn"
-        android:text="Submit" />
+        android:text="Submit"
+        android:textAllCaps="false" />
 </RelativeLayout>
