--- a/app/src/main/res/layout/activity_display_patient_info.xml
+++ b/app/src/main/res/layout/activity_display_patient_info.xml
@@ -7,26 +7,15 @@
     tools:context="com.gb.comp3074_assignment2.classes.DisplayPatientInfoActivity">
 
     <TextView
-        android:id="@+id/patient_information"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/patient_id_text"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_toEndOf="@+id/test_id_text"
-        android:layout_toRightOf="@+id/test_id_text"
-        android:text="Patient Information:"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="34dp" />
-
-    <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/patient_information"
-        android:layout_alignStart="@+id/patient_information"
-        android:layout_below="@+id/patient_information"
-        android:layout_marginTop="22dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView20"
+        android:layout_marginLeft="11dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="29dp"
         android:text="Patient ID:" />
 
     <TextView
@@ -110,5 +99,18 @@
         android:layout_alignTop="@+id/textView13"
         android:layout_toEndOf="@+id/textView9"
         android:layout_toRightOf="@+id/textView9" />
+
+    <TextView
+        android:id="@+id/textView20"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="?android:attr/colorAccent"
+        android:gravity="center"
+        android:text="Patient Information"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 
 </RelativeLayout>
