--- a/app/src/main/res/layout/activity_doctor_main.xml
+++ b/app/src/main/res/layout/activity_doctor_main.xml
@@ -10,10 +10,11 @@
         android:id="@+id/displayTestButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/enterTestButton"
+        android:layout_below="@+id/textView19"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="48dp"
+        android:layout_marginTop="84dp"
         android:text="Display Test"
+        android:textAllCaps="false"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="162dp" />
 
@@ -21,10 +22,37 @@
         android:id="@+id/enterTestButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignTop="@+id/displayTestButton"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="198dp"
+        android:layout_marginTop="68dp"
         android:text="Enter Test Information"
+        android:textAllCaps="false"
         tools:layout_editor_absoluteX="174dp"
         tools:layout_editor_absoluteY="162dp" />
+
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="?android:attr/colorAccent"
+        android:gravity="center"
+        android:text="Please choose an option"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="36dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="25dp"
+        android:onClick="onLogoutClick"
+        android:text="Logout" />
 </RelativeLayout>
