--- a/app/src/main/res/layout/activity_enter_patient.xml
+++ b/app/src/main/res/layout/activity_enter_patient.xml
@@ -8,15 +8,15 @@
 
     <TextView
         android:id="@+id/textView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="13dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="18dp"
-        android:text="Enter New Patient:"
+        android:background="?android:attr/colorAccent"
+        android:gravity="center"
+        android:text="Enter New Patient"
+        android:textColor="@android:color/white"
         android:textSize="18sp" />
 
     <EditText
@@ -87,6 +87,7 @@
         android:layout_below="@+id/doctorIdEdit"
         android:layout_marginTop="19dp"
         android:onClick="onClickBtn"
-        android:text="Button" />
+        android:text="Submit"
+        android:textAllCaps="false" />
 
 </RelativeLayout>
