--- a/app/src/main/res/layout/activity_enter_test.xml
+++ b/app/src/main/res/layout/activity_enter_test.xml
@@ -8,16 +8,16 @@
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="22dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="19dp"
-        android:text="Add Test Data:"
-        android:textSize="24sp" />
+        android:background="?android:attr/colorAccent"
+        android:gravity="center"
+        android:text="Add Test Data"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/testIdEdit"
@@ -28,8 +28,8 @@
         android:layout_below="@+id/textView14"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:inputType="number"
-        android:text="Test ID" />
+        android:hint="Test ID"
+        android:inputType="number" />
 
     <EditText
         android:id="@+id/bplEdit"
@@ -40,8 +40,8 @@
         android:layout_below="@+id/testIdEdit"
         android:layout_marginTop="18dp"
         android:ems="10"
-        android:inputType="number"
-        android:text="BPL" />
+        android:hint="BPL"
+        android:inputType="number" />
 
     <EditText
         android:id="@+id/bphEdit"
@@ -50,10 +50,10 @@
         android:layout_alignLeft="@+id/bplEdit"
         android:layout_alignStart="@+id/bplEdit"
         android:layout_below="@+id/bplEdit"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="15dp"
         android:ems="10"
-        android:inputType="number"
-        android:text="BPH" />
+        android:hint="BPL"
+        android:inputType="number" />
 
     <EditText
         android:id="@+id/temperatureEdit"
@@ -62,21 +62,18 @@
         android:layout_alignLeft="@+id/bphEdit"
         android:layout_alignStart="@+id/bphEdit"
         android:layout_below="@+id/bphEdit"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="17dp"
         android:ems="10"
-        android:inputType="number"
-        android:text="Temperature" />
+        android:hint="Temperature"
+        android:inputType="number" />
 
     <Button
         android:id="@+id/submitBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/temperatureEdit"
-        android:layout_marginTop="20dp"
+        android:layout_below="@+id/bloodPressureEdit"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp"
         android:onClick="onClickBtn"
         android:text="Submit" />
 
@@ -84,10 +81,12 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView11"
-        android:layout_alignStart="@+id/textView11"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/textView11"
-        android:layout_marginTop="14dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="15dp"
         android:text="Name:"
         android:textSize="18sp" />
 
@@ -124,4 +123,16 @@
         android:layout_toEndOf="@+id/textView14"
         android:layout_toRightOf="@+id/textView14"
         android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/bloodPressureEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/temperatureEdit"
+        android:layout_alignStart="@+id/temperatureEdit"
+        android:layout_below="@+id/temperatureEdit"
+        android:layout_marginTop="13dp"
+        android:ems="10"
+        android:hint="Blood Pressure"
+        android:inputType="number" />
 </RelativeLayout>
