--- a/app/src/main/res/layout/activity_patient_test_selection.xml
+++ b/app/src/main/res/layout/activity_patient_test_selection.xml
@@ -5,17 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.gb.comp3074_assignment2.PatientTestSelection">
+
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="11dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="12dp"
+        android:background="?android:attr/colorAccent"
+        android:gravity="center"
         android:text="Choose Patient"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
         tools:layout_editor_absoluteX="105dp"
         tools:layout_editor_absoluteY="25dp" />
 
@@ -39,7 +41,8 @@
         android:layout_below="@+id/patient_spinner"
         android:layout_marginTop="13dp"
         android:onClick="onClickBtn"
-        android:text="Submit" />
+        android:text="Submit"
+        android:textAllCaps="false" />
 
 </RelativeLayout>
 
